--- a/package.json
+++ b/package.json
@@ -1,26 +1,28 @@
 {
   "name": "jlangs-processor",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "",
   "main": "index.js",
   "scripts": {
-	"test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
-	"type": "git",
-	"url": "git+https://github.com/JoniJnm/jlangs-processor.git"
+    "type": "git",
+    "url": "git+https://github.com/JoniJnm/jlangs-processor.git"
   },
   "author": "JoniJnm",
   "license": "ISC",
   "bugs": {
-	"url": "https://github.com/JoniJnm/jlangs-processor/issues"
+    "url": "https://github.com/JoniJnm/jlangs-processor/issues"
   },
   "homepage": "https://github.com/JoniJnm/jlangs-processor#readme",
   "dependencies": {
-	"escape-string-regexp": "^1.0.5",
-	"lodash": "^4.6.1",
-	"md5": "^2.1.0",
-	"q": "^1.4.1",
-	"temp": "^0.8.3"
+    "escape-string-regexp": "^1.0.5",
+    "lodash": "^4.6.1",
+    "md5": "^2.1.0",
+    "node-libcurl": "^0.9.0",
+    "q": "^1.4.1",
+    "temp": "^0.8.3",
+    "zip-local": "^0.3.3"
   }
 }
